lang/tests/derive/sol/ui/fail/03-not-public.rs
use liquid::State;
use liquid_lang as liquid;

#[derive(State)]
struct MyStruct {
    i: i128,
}

fn main() {}
